# learn

./: CMakeLists.txt  algo-notes.md  dev-notes.md
Dsa-notes/: 1-analysis.md  2-technique.md  3-struct.md  4-dynamic.md  6-geometry.md  8-graph.md  begin.md  hashing.md  index.md  math.md  road.txt  string.md  struct.md  technique.md
Dsa-notes/math-floder/: math.md
Dsa-notes/math-floder/number-theory/: number-theory.md
Dsa-notes/math-floder/number-theory/a-folder/: a  a.cpp  a.md  a.py
Dsa-notes/math-floder/number-theory/a-folder/a.dSYM/Contents/Resources/DWARF/: a
Dsa-notes/math-floder/number-theory/a-folder/a.dSYM/Contents/Resources/Relocations/aarch64/: a.yml
Dsa-notes/math-floder/number-theory/b-folder/: b.md
